force-app/main/default/objects/Purchase_order__c/Purchase_order__c.object-meta.xml
<CustomObject>
    <description>this object will keep records of purchase made from the suppliers</description>
    <label>Purchase order</label>
    <nameField>
        <label>Purchase order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>