force-app/main/default/objects/Purchase_order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>this field will generate the order number</description>
    <displayFormat>Order - {00}</displayFormat>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>