force-app/main/default/objects/Purchase_order__c/fields/supplier__c.field-meta.xml
<CustomField>
    <fullName>supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>supplier</label>
    <referenceTo>supplier__c</referenceTo>
    <relationshipLabel>Purchase orders</relationshipLabel>
    <relationshipName>Purchase_orders</relationshipName>
    <type>Lookup</type>
</CustomField>